[gd_scene load_steps=21 format=3 uid="uid://dqmo2rrv65kyx"]

[ext_resource type="Script" path="res://Scripts/item_physics.gd" id="1_f7dhf"]
[ext_resource type="Texture2D" uid="uid://db2m8xiru4r4i" path="res://Assets/items.png" id="1_kkl70"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wcsex"]
size = Vector2(28, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjdkc"]
atlas = ExtResource("1_kkl70")
region = Rect2(0, 0, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nstm"]
atlas = ExtResource("1_kkl70")
region = Rect2(15, 0, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_rthmr"]
atlas = ExtResource("1_kkl70")
region = Rect2(30, 0, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivmam"]
atlas = ExtResource("1_kkl70")
region = Rect2(45, 0, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk1x4"]
atlas = ExtResource("1_kkl70")
region = Rect2(60, 0, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwx6n"]
atlas = ExtResource("1_kkl70")
region = Rect2(0, 30, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_64uie"]
atlas = ExtResource("1_kkl70")
region = Rect2(0, 15, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_hynnj"]
atlas = ExtResource("1_kkl70")
region = Rect2(15, 15, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_spoxd"]
atlas = ExtResource("1_kkl70")
region = Rect2(30, 15, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_42mhs"]
atlas = ExtResource("1_kkl70")
region = Rect2(45, 15, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_th66y"]
atlas = ExtResource("1_kkl70")
region = Rect2(0, 75, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcxw6"]
atlas = ExtResource("1_kkl70")
region = Rect2(15, 75, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfoyx"]
atlas = ExtResource("1_kkl70")
region = Rect2(30, 75, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrkl1"]
atlas = ExtResource("1_kkl70")
region = Rect2(0, 60, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvahq"]
atlas = ExtResource("1_kkl70")
region = Rect2(15, 60, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_th2m1"]
atlas = ExtResource("1_kkl70")
region = Rect2(0, 45, 15, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_ugnrt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjdkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nstm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rthmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivmam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk1x4")
}],
"loop": false,
"name": &"fireflies",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwx6n")
}],
"loop": true,
"name": &"flint",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64uie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hynnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spoxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42mhs")
}],
"loop": false,
"name": &"grass",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_th66y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcxw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfoyx")
}],
"loop": false,
"name": &"heart",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrkl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvahq")
}],
"loop": false,
"name": &"iceCrystal",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_th2m1")
}],
"loop": true,
"name": &"mushroom",
"speed": 5.0
}]

[node name="ItemPhysics" type="RigidBody2D"]
z_index = 6
collision_layer = 536871048
collision_mask = 128
input_pickable = true
can_sleep = false
freeze_mode = 1
contact_monitor = true
script = ExtResource("1_f7dhf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_wcsex")

[node name="PhysicsItemAnimator" type="AnimatedSprite2D" parent="."]
scale = Vector2(3.10231, 3.10231)
sprite_frames = SubResource("SpriteFrames_ugnrt")
animation = &"fireflies"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_shape_entered" from="." to="." method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="." to="." method="_on_mouse_shape_exited"]
[connection signal="animation_finished" from="PhysicsItemAnimator" to="." method="_on_physics_item_animator_animation_finished"]
